<resources>
    <string name="app_name">Binance</string>
    <string name="order_book">Order Book</string>
    <string name="trades">Market Trades</string>
    <string name="volumeAbbreviation">Vol. %1$s</string>
    <string name="usdPrice">$ %1$s</string>
    <string name="priceChangePercent">%1$s%%</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="quoteCurrencyNamePlaceholder">\u0020/ %1$s</string>
    <string name="volumeWithCurrencyPlaceholder">Vol %1$s %2$s</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="currencyPairPlaceholder">%1$s/%2$s</string>
    <string name="favorites">Favorites</string>
    <string name="empty_order_book_or_trade_item_placeholder">--</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
</resources>
